<resources>
    <string name="app_name">BIHAR</string>

    <!-- Básicos -->
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="noDisponible">No disponible</string>
    <string name="formatoFechaDia">EEEE, dd \'de\' MMMM \'de\' YYYY</string>

    <!-- Actividad Matricula -->
    <string name="matricula_curso">Curso</string>
    <string name="matricula_convocatoria">Convocatoria</string>
    <string name="matricula_notaOrdinaria">Nota Ord.</string>
    <string name="matricula_notaExtraOrdinaria">Nota Extraord.</string>
    <string name="matricula_texto_anioMatricula">"Año de matrícula: "</string>
    <string name="dialog_matricaTxtSelectAnio">Seleccione el año de la matrícula</string>
    <string name="matricula_notaNP">NP</string>
    <string name="matricula">MATRÍCULA</string>

    <!-- LOGIN -->
    <string name="login_usuario">Usuario</string>
    <string name="login_contraseña">Contraseña</string>
    <string name="login_contraseña_recordar">"Recordar contraseña "</string>
    <string name="login_entrar">Entrar</string>
    <string name="usuario_vacio">Introduce el usuario</string>
    <string name="password_vacia">Introduce la contraseña</string>
    <string name="menu_identificacion">Acceso</string>
    <string name="login_datos_incorrectos">Usuario y/o contraseña incorrectos</string>
    <string name="error_general">¡Ups! Parece que algo ha fallado…</string>
    <string name="login_cambiar_usuario">Utilizar otro usuario</string>
    <string name="contraseña_olvidada">He olvidado mi contraseña</string>
    <string name="acceso_huella">Acceso con huella</string>

    <!--BIBLIOTECA -->
    <string name="biblioteca_txtFiltrado">Filtrar temas:</string>
    <string name="biblioteca_btnFiltrar">Filtrar</string>
    <string name="biblioteca_temaInformatica">Informática</string>
    <string name="biblioteca_temaEconomia">Economía</string>
    <string name="biblioteca_temaMedicina">Medicina</string>
    <string name="libroInformacion_txtInfoLibro">Información del libro</string>
    <string name="libroEscritoPor">Escrito por</string>
    <string name="libroInformacion_descripcion">Descripción: </string>
    <string name="libroInformacion_editorial">Editorial: </string>
    <string name="libroInformacion_publicacion">"Publicado en "</string>
    <string name="lista_libroInformacion_localizacion">Localización</string>
    <string name="lista_libroInformacion_reservar">Reservar</string>
    <string name="libroInformacion_libroDisponible">Disponible</string>
    <string name="libroInformacion_libroNoDisponible">"No disponible hasta "</string>
    <string name="libroInformacion_reservaRealizada">Reserva realizada</string>
    <string name="libroInformacion_reservaFallo">Error al reservar el libro</string>
    <string name="title_activity_maps_universidad">Map</string>
    <string name="libroInformacion_explPermiso">Necesario el permiso para ver la localización</string>
    <string name="biblioteca">BIBLIOTECA</string>
    <string name="libroInformacion_universidades">Universidades</string>
    <string name="lista_autor">"Escrito por "</string>
    <string name="lista_cuando">"Publicado en "</string>

    <!--TUTORIAS -->
    <string name="tutorias">TUTORÍAS</string>
    <string name="mostrarTodo">Mostrar todo</string>
    <string name="msgConfirmar">Escribe, si lo deseas, el tema que vas a tratar en la tutoría</string>
    <string name="msgPreguntaConfirmar">¿Estás seguro de que quieres reservar esta tutoría?</string>
    <string name="hecho">Hecho</string>
    <string name="reserva">RESERVA</string>
    <string name="tutoriaReservada">Tutoría reservada</string>
    <string name="reservaCancelada">Reserva cancelada</string>
    <string name="preguntaCancelar">¿Realmente deseas cancelar la reserva de la tutoría?</string>
    <string name="notificacionEstado">%s ha %s tu petición de tutoría.</string>
    <string name="notificacionSolicitud">%s ha solicitado reunirse contigo en una tutoría.</string>
    <string name="notificacionCancelar">%s ha cancelado la solitud de tutoría</string>
    <string name="aceptado">aceptado</string>
    <string name="rechazado">rechazado</string>

    <!-- FORO -->
    <string name="foro_escribir">Escribe un mensaje</string>
    <string name="foro_pregunta_acceso">¿A qué foro deseas acceder?</string>
    <string name="foro_vacio">No hay mensajes en este foro</string>
    <string name="foro_titulo">FORO</string>
    <string name="foro_mensaje_enviado">%s ha enviado un mensaje.</string>

    <!-- CREDITOS -->
    <string name="creditos">CRÉDITOS</string>
    <string name="creditos_desglose">Desglose de créditos</string>
    <string name="creditos_obligatorios">Obligatorios:</string>
    <string name="creditos_basicos">Básicos de rama:</string>
    <string name="creditos_optativos">Optativos:</string>
    <string name="creditos_tfg">Trabajo Fin Grado:</string>

    <!--PRACTICAS -->
    <string name="practicas">PRÁCTICAS</string>
    <string name="practica_apuntar">Quiero inscribirme</string>
    <string name="practica_localizacion">Localización:</string>
    <string name="practica_horas">Horas totales:</string>
    <string name="practica_salario">Salario total:</string>
    <string name="practica_descripcion">Descripción:</string>
    <string name="practica_tareas">Tareas:</string>
    <string name="practica_fechas">Desde - Hasta:</string>
    <string name="practica_bizkaia">Vizcaya</string>
    <string name="practica_gipuzkoa">Guipúzcoa</string>
    <string name="practica_araba">Álava</string>
    <string name="practica_inscripcion_titulo">Inscripción práctica</string>
    <string name="practica_inscripcion_mensaje">¿Deseas inscribirte en la práctica? Cualquier inscripción anterior quedará anulada.</string>
    <string name="practica_inscripcion_cancelada">Inscripción cancelada</string>
    <string name="practica_inscripcion_realizada">Inscripción realizada</string>

    <!-- HORARIOS-->
    <string name="horario_diaLunes">Lunes</string>
    <string name="horario_diaMartes">Martes</string>
    <string name="horario_diaMiercoles">Miércoles</string>
    <string name="horario_diaJueves">Jueves</string>
    <string name="horario_diaViernes">Viernes</string>
    <string name="lista_horario_horaInicio">Hora inicio</string>
    <string name="lista_horario_horaFin">Hora fin</string>
    <string name="horario">HORARIO</string>

    <!--  AJUSTES -->
    <string name="ajustes_usuario">USUARIO</string>
    <string name="ajustes_aplicacion">BIHAR</string>
    <string name="ajustes_idioma">Idioma</string>
    <string name="ajustes_idioma_descripcion">Elige el idioma de la aplicación</string>
    <string name="ajustes_idioma_castellano">Español</string>
    <string name="ajustes_idioma_euskera">Euskera</string>
    <string name="ajustes_web">Portal Web UPV - EHU</string>
    <string name="ajustes_web_descripcion">Accede a la web de UPV - EHU</string>
    <string name="ajustes_gmail">Vincular cuenta Gmail</string>
    <string name="ajustes_gmail_descripcion">Vincula tu correo electrónico de Google</string>
    <string name="ajustes_emailError">Introduzca un correo electrónico correcto</string>
    <string name="ajustes_contrasena">Cambiar contraseña</string>
    <string name="ajustes_contrasena_descripcion">Sustituye la contraseña actual</string>
    <string name="ajustes_gmail_dialog">Escriba el correo electrónico</string>
    <string name="ajustes_contrasena_dialog">Escriba una nueva contraseña</string>
    <string name="ajustes_fotoPerfil">Cambiar foto perfil</string>
    <string name="ajustes_fotoPerfil_descripcion">Sustituye la imagen actual</string>
    <string name="ajustes_notificacion_descripcion">Activar o desactivar notificaciones</string>
    <string name="ajustes_notificacion">Notificaciones</string>
    <string name="dialog_foto_eleccion">Elige desde donde quieres obtener la foto</string>
    <string name="dialog_foto_capturar">Capturar foto</string>
    <string name="dialog_foto_galeria">Galería</string>
    <string name="dialog_foto_cancelar">Cancelar</string>
    <string name="dialog_foto_seleccionar">Selecciona un método</string>
    <string name="avisoImagen">Imagen cambiada</string>
    <string name="desvincularCuenta">¿Deseas desvincular tu cuenta Google de la aplicación?</string>
    <string name="examen">Examen:</string>
    <string name="tutoria">Tutoría:</string>
    <string name="aula">Aula:</string>
    <string name="datosGuardados">Datos guardados correctamente.</string>
    <string name="ajustes">AJUSTES</string>
    <string name="dialog_cambioContrasena_persona">"Persona: "</string>
    <string name="dialog_cambioContrasena_contrasenaAnterior">"Contraseña antigua: "</string>
    <string name="dialog_cambioContrasena_contrasenaNueva">Contraseña nueva</string>
    <string name="dialog_cambioContrasena">Cambiar contraseña</string>
    <string name="dialog_cambioContrasenaDistintos">Las contraseñas no coinciden</string>
    <string name="ajustes_contrasenaCambiada">Contraseña cambiada</string>
    <string name="ajustes_contrasenaNoCambiada">Error, contraseña no modificada</string>

    <!-- ASIGNATURAS-->
    <string name="asignaturas_curso">Curso: %s</string>
    <string name="primero">Primero</string>
    <string name="segundo">Segundo</string>
    <string name="tercero">Tercero</string>
    <string name="cuarto">Cuarto</string>
    <string name="quinto">Quinto</string>
    <string name="asignaturas_anio">Año</string>
    <string name="asignaturas_tipo">Tipo</string>
    <string name="asignaturas_conv">Conv.</string>
    <string name="asignaturas_nota">Nota</string>

    <!-- RESERVAS-->
    <string name="aceptada">Aceptada</string>
    <string name="rechazada">Rechazada</string>
    <string name="creditos_superados">CRÉDITOS SUPERADOS:</string>
    <string name="nota_media">NOTA MEDIA:</string>

    <!-- AÑADIR NOTAS PROFESOR  -->
    <string name="imparte_anadirNota">Añadir nota</string>
    <string name="imparte_idPersona">ID Alumno:</string>
    <string name="imparte_nombreAlumno">Nombre del alumno</string>
    <string name="dialog_notaprofesor_alumno">"Alumno: "</string>
    <string name="dialog_notaprofesor_nota">"Nota: "</string>
    <string name="dialog_notaprofesor_notaError">Error, nota baja o muy alta</string>
    <string name="dialog_notaprofesor_vacio">Error, escribe una nota</string>
    <string name="notasprofesor">NOTAS</string>
    <string name="dialog_notaprofesor_ordinaria">¿C. Ordinaria?</string>

    <!-- NOTIFICACIONES -->
    <string name="notificacion_nota">Notas</string>
    <string name="notificacion_descripcion">Muestra las notificaciones de BIHAR, ya sean la publicación de las notas, realización de las reservas, foros etc.</string>
    <string name="libroReservado">Libro reservado</string>
    <string name="libroReservadoQueda">queda reservado hasta</string>

    <!-- HUELLA -->
    <string name="sin_huella">Primero debes registrar una huella en el dispositivo</string>
    <string name="pantalla_huella_descripcion">Por favor, utiliza tu huella para acceder a la aplicación.</string>

    <!-- MIX -->
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="egela">EGELA</string>
    <string name="asignaturas">ASIGNATURAS</string>
    <string name="gaur">GAUR</string>
    <string name="expendiente">EXPEDIENTE</string>
    <string name="mensaje_foro_vacio">El mensaje no puede estar vacío</string>
    <string name="ajustes_emailVacio">Error, escriba un correo electrónico</string>

</resources>
