<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/ic_ajustes_categoria_usuario"
        android:key="keyUsuario"
        android:selectable="false"
        android:title="@string/ajustes_usuario">

        <Preference
            android:dialogTitle="@string/ajustes_gmail_dialog"
            android:icon="@drawable/ic_ajustes_email"
            android:key="gmail"
            android:summary="@string/ajustes_gmail_descripcion"
            android:title="@string/ajustes_gmail" />

        <PreferenceScreen
            android:dialogTitle="@string/ajustes_contrasena_dialog"
            android:icon="@drawable/ic_ajustes_contrasena"
            android:key="contrasena"
            android:summary="@string/ajustes_contrasena_descripcion"
            android:title="@string/ajustes_contrasena" />

        <PreferenceScreen
            android:icon="@drawable/ic_ajustes_camara"
            android:key="fotoPerfil"
            android:summary="@string/ajustes_fotoPerfil_descripcion"
            android:title="@string/ajustes_fotoPerfil" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/ic_ajustes_categoria_bihar"
        android:selectable="false"
        android:title="@string/ajustes_aplicacion">
        <ListPreference
            android:dialogTitle="@string/ajustes_idioma_descripcion"
            android:entries="@array/idioma"
            android:entryValues="@array/idiomaValores"
            android:icon="@drawable/ic_ajustes_idioma"
            android:key="idioma"
            android:summary="@string/ajustes_idioma_descripcion"
            android:title="@string/ajustes_idioma" />

        <PreferenceScreen
            android:icon="@drawable/ic_ajustes_web"
            android:key="portalWeb"
            android:summary="@string/ajustes_web_descripcion"
            android:title="@string/ajustes_web" />

        <SwitchPreference
            android:icon="@drawable/ic_ajustes_notificacion"
            android:key="notificacion"
            android:summary="@string/ajustes_notificacion_descripcion"
            android:title="@string/ajustes_notificacion" />
    </PreferenceCategory>



</PreferenceScreen>