<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.Biblioteca"
    android:orientation="vertical">

    <fragment
        android:id="@+id/frgmt_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:name="com.example.bihar.view.fragments.ToolBar"
        tools:layout="@layout/fragment_toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biblioteca_txtFiltrado"
            android:padding="10dp"
            android:textSize="15sp"
            android:textColor="@color/negro"
            android:layout_weight="3"/>

        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/biblioteca_btnFiltrar"
            android:onClick="filtrarLibros"/>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:padding="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/biblioteca_temaInformatica"
            android:id="@+id/biblioteca_radio_informatica"
            android:padding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/biblioteca_temaEconomia"
            android:id="@+id/biblioteca_radio_economia"
            android:padding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/biblioteca_temaMedicina"
            android:id="@+id/biblioteca_radio_medicina"
            tools:ignore="HardcodedText"
            android:padding="8dp"/>

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/negro"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/biblioteca_lista"
        android:padding="10dp"/>

</LinearLayout>