<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/titulos_tablerow_verde">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_notaprofesor_alumno"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_notaprofesor_alumno"
            android:textColor="@color/blanco"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/negro"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:paddingStart="20dp"
                android:textStyle="bold"
                android:text="@string/dialog_notaprofesor_nota"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_notaprofesor_ordinaria"
                android:layout_marginStart="10dp"
                android:textColor="@color/negro"
                android:textStyle="bold"
                android:id="@+id/dialog_notaprofesor_switch"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/contenido_tablerow_blanco"
            android:inputType="number"
            android:textColor="@color/negro"
            android:maxLength="2"
            android:id="@+id/dialog_notaprofesor_nota"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textColor="@color/negro"
            android:background="@drawable/boton_redondo_addnota"
            android:text="@string/imparte_anadirNota"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/dialog_notaprofesor_boton"/>


    </LinearLayout>



</LinearLayout>