<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lista_matriculas_asignatura"
        android:textSize="15sp"
        android:paddingBottom="3dp"
        android:textColor="@color/negro"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:background="@drawable/bordes_tablelayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula_curso"
                    android:theme="@style/matricula_tableRows"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula_convocatoria"
                    android:theme="@style/matricula_tableRows"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula_notaOrdinaria"
                    android:theme="@style/matricula_tableRows"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/matricula_notaExtraOrdinaria"
                    android:theme="@style/matricula_tableRows"/>
            </TableRow>

            <TableRow
                android:background="@drawable/bordes_tablelayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_matricula_curso"
                    android:theme="@style/matricula_tableRows"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_matricula_convocatoria"
                    android:theme="@style/matricula_tableRows"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_matricula_notaOrdinaria"
                    android:theme="@style/matricula_tableRows"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lista_matricula_notaExtraordinaria"
                    android:theme="@style/matricula_tableRows"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</LinearLayout>