<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/titulos_tablerow_verde">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cambioContrasena_persona"
            android:textColor="@color/blanco"
            android:textSize="20sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_cambioContrasena_persona"
            android:textColor="@color/blanco"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/negro"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cambioContrasena_contrasenaAnterior"
            android:textColor="@color/negro"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/contenido_tablerow_blanco"
            android:textColor="@color/negro"
            android:inputType="textPassword"
            android:id="@+id/dialog_cambioContrasena_contrasenaAnterior"
            android:padding="3dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cambioContrasena_contrasenaNueva"
            android:textColor="@color/negro"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/contenido_tablerow_blanco"
            android:textColor="@color/negro"
            android:inputType="textPassword"
            android:id="@+id/dialog_cambioContrasena_contrasenaNueva"
            android:padding="3dp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_redondo_addnota"
        android:text="@string/dialog_cambioContrasena"
        android:id="@+id/dialog_cambioContrasena_boton"
        android:textColor="@color/negro"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
</LinearLayout>