<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true" >

    <fragment
        android:id="@+id/frgmt_toolbar"
        android:name="com.example.bihar.view.fragments.ToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:focusableInTouchMode="true"
        tools:layout="@layout/fragment_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/login1ProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/login1TextAcceso"
            app:layout_constraintStart_toEndOf="@+id/login1TextAcceso"
            app:layout_constraintTop_toTopOf="@+id/login1TextAcceso" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <ImageView
            android:id="@+id/login1Logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:srcCompat="@drawable/logo_upv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/login1TextAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_identificacion"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login1InputUsuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login1InputUsuario"
            app:layout_constraintTop_toBottomOf="@+id/login1Logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login1InputUsuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toTopOf="@+id/login1InputContraseña"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login1TextAcceso">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login1EditUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_usuario"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login1InputContraseña"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintBottom_toTopOf="@+id/login1SwitchRecordar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login1InputUsuario"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login1EditContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_contraseña"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Switch
            android:id="@+id/login1SwitchRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_contraseña_recordar"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login1BotonEntrar"
            app:layout_constraintEnd_toEndOf="@+id/login1InputContraseña"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login1InputContraseña" />

        <Button
            android:id="@+id/login1BotonEntrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_redondo_naranja"
            android:onClick="iniciarSesion"
            android:text="@string/login_entrar"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login1SwitchRecordar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>